Fixed view overflow

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -26,10 +26,11 @@ a {
   background-color: #f0f0f0;
   height: 100%;
   min-height: 100vh;
+  width: 100vw;
+  max-width: 100%;
   overflow: hidden;
   padding-top: 20px;
   margin-top: 20px;
-  width: 100vw;
   font-family: 'Nimbus-Sans';
 }
 
